fixing spacing issues in sidebar
--HG--
branch : future-31

--- a/content/assets/style/_main.sass
+++ b/content/assets/style/_main.sass
@@ -94,14 +94,20 @@ body
   .figure
     text-align: center
 
+  ol
+    margin-bottom: 5px
+
   li
     list-style-type: none
     background-color: #ccdd99
     width: 270px
+    margin: 0 0 5px 0
+
+    li
+      margin: 0
 
     a, .active
       display: block
-      margin: 0 0 5px 0
       padding: 2px 25px
       font-family: Helvetica, Arial, sans-serif
       font-weight: bold
